# automations

./: .gitignore  README.md
expenses/: system_prompt.md
expenses/input/202605/: ledger.csv  transactions_2026-06-10T08_56_14.050Z.csv
expenses/input/202606/: ledger.csv  transactions_2026-07-10T12_43_48.653Z.xls
invoicing/: pyproject.toml
invoicing/src/invoicing/: main.py
study/: system_prompt.md
