[project]
name = "automations"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Roberts",email = "jrobertsotero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [
    {include = "invoicing", from = "src"}
]

[tool.poetry.dependencies]
gspread = "^6.2.1"
google-api-python-client = "^2.171.0"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
invoicing = "invoicing.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
